[gd_scene load_steps=17 format=3 uid="uid://8boxysjwmexf"]

[ext_resource type="Texture2D" uid="uid://1wnayxs71oq3" path="res://Sprites/Wood.png" id="1_c5oae"]
[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_x5mat"]
[ext_resource type="AudioStream" uid="uid://be5edgsa4hhgj" path="res://Audio/click_audio.mp3" id="2_0q0un"]
[ext_resource type="Texture2D" uid="uid://bxj7junslipb4" path="res://Sprites/pause_bg.png" id="2_kbeua"]
[ext_resource type="Theme" uid="uid://cygd27c88adfn" path="res://Themes/button.tres" id="4_cl52e"]
[ext_resource type="Texture2D" uid="uid://t8yktp0lmyvi" path="res://Sprites/pause_button.png" id="4_idoqy"]

[sub_resource type="Theme" id="Theme_jpf7w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mns4y"]
atlas = ExtResource("1_c5oae")
region = Rect2(91, 2, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksyym"]
atlas = ExtResource("1_c5oae")
region = Rect2(1, 2, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqtvi"]
atlas = ExtResource("1_c5oae")
region = Rect2(1, 27, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrjqn"]
atlas = ExtResource("1_c5oae")
region = Rect2(61, 2, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_aenwb"]
atlas = ExtResource("1_c5oae")
region = Rect2(56, 128, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_y41h0"]
atlas = ExtResource("1_c5oae")
region = Rect2(46, 27, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8sdd"]
atlas = ExtResource("1_c5oae")
region = Rect2(121, 27, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp12a"]
atlas = ExtResource("1_c5oae")
region = Rect2(91, 27, 12, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_mujv8"]
atlas = ExtResource("1_c5oae")
region = Rect2(46, 2, 12, 18)

[node name="Pause" type="Control"]
z_index = 11
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x5mat")

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_0q0un")
volume_db = -10.0
bus = &"SFX"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -135.0
offset_right = 200.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_jpf7w")

[node name="PauseBg" type="Sprite2D" parent="CanvasLayer/Panel"]
self_modulate = Color(1, 1, 1, 0.156863)
position = Vector2(237, 143.5)
scale = Vector2(7, 7)
texture = ExtResource("2_kbeua")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.5
offset_top = -105.0
offset_right = 45.5
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2

[node name="g" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_mns4y")

[node name="a" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_ksyym")

[node name="m" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_uqtvi")

[node name="e" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_yrjqn")

[node name="space" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_aenwb")

[node name="p" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_y41h0")

[node name="a2" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_ksyym")

[node name="u" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_s8sdd")

[node name="s" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_bp12a")

[node name="e2" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_yrjqn")

[node name="d" type="TextureRect" parent="CanvasLayer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_mujv8")

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -53.0
offset_right = 59.5
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
process_mode = 3
layout_mode = 2
theme = ExtResource("4_cl52e")
text = "Resume"

[node name="Restart" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
process_mode = 3
layout_mode = 2
theme = ExtResource("4_cl52e")
text = "Restart"

[node name="Settings" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
process_mode = 3
layout_mode = 2
theme = ExtResource("4_cl52e")
text = "Settings"

[node name="Exit" type="Button" parent="CanvasLayer/Panel/VBoxContainer2"]
process_mode = 3
layout_mode = 2
theme = ExtResource("4_cl52e")
text = "Exit to menu"

[node name="PauseBtn" type="Button" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_top = 12.0
offset_right = -17.0
offset_bottom = 52.0
grow_horizontal = 0
icon_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/PauseBtn"]
position = Vector2(30, 19)
scale = Vector2(0.6, 0.6)
texture = ExtResource("4_idoqy")

[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer2/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseBtn" to="." method="_on_pause_btn_pressed"]
